@@ -78,7 +78,6 @@ public:
 
         PPK_WindowsPageSize,
         PPK_FontEmbedding,
-        PPK_SuppressSystemPrintStatus,
 
         PPK_Duplex,
 
